--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AnaelCourjaud.github.io/react-app-test",
+  "homepage": "https://SylvainCourjaud.github.io/Solec",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
